--- a/Grit/style.css
+++ b/Grit/style.css
@@ -1,3 +1,6 @@
+@font-face{
+    src: url(assets/fontovi/Matroska-Wg3v.ttf);
+font-family: Matroska;}
 @media(max-width:3000px){
 .navbar{
     height: 150px;
@@ -7,70 +10,63 @@
     align-items: center;
 }
 .sredina{
-    background-color: aqua;
     width: 80%;
-    height: 700px;
-    opacity: 80%;
+    height: 780px;
     display:flex;
-    
+    background: black;
 }
 .dno{
-    background-color: rgb(255, 0, 242);
     width: 80%;
-    height: 200px;
-    opacity: 80%;
+    height: 300px;
     display:flex;
 }
 .sidebar{
-    height: 700px;
+    height: 800px;
     width: 20%;
-    background:rgb(47, 255, 255);
-    opacity: 80%; 
     margin-left:80%;
     display:flex;
-    margin-top:-700px;
+    margin-top:-800px;
     flex-direction: column;
 }
+
 .povecanje{
-    height: 100%;
-    width: 33.3%;
-    background:red;
-    opacity: 80%;
+height: 100%;
+width: 38%;
+display:flex;
+align-items: center;
+margin:auto;
 }
 .paragraf{
-    height: 100%;
-    width: 33.3%;
-    background:blue;
-    opacity: 80%;
+height: 100%;
+width: 34%;
+padding-left: 40px;
+padding-right: 40px;
+display: flex;
+align-items: center;
 }
 .slikadoledesno{
-    height: 100%;
-    width: 33.33%;
-    background:greenyellow;
-    opacity: 80%;
+height: 100%;
+width: 24%;
 }
+
 }
-@media(max-width:1300px){
+
+
+@media(max-width:1350px){
     .navbar{
-        height: 150px;
-        width: 100%;
-        background:black;
-        display: flex;
-        align-items: center;
+    height: 150px;
+    width: 100%;
+    display: flex;
+    align-items: center;
     }
     .sredina{
-        background-color: aqua;
         width: 100%;
         height: 700px;
-        opacity: 80%;
         display:flex;
-        
     }
     .dno{
-        background-color: rgb(255, 0, 242);
         width: 42%;
-        height: 600px;
-        opacity: 80%;
+        height: 550px;
         display:flex;
         flex-direction: column;
         align-items: center;
@@ -78,126 +74,186 @@
     .sidebar{
         height: 600px;
         width: 58%;
-        background:rgb(47, 255, 255);
-        opacity: 80%; 
         margin-left:42%;
-        margin-top:-600px;
+        margin-top:-550px;
         display:flex;
         flex-direction: column;
         flex-wrap: wrap;
-        
     }
     .sidebar>*{
     flex: 1 1 300px;
         }
-    .povecanje{
-        height: 30%;
-        width: 100%;
-        background:red;
-        opacity: 80%;
-        order:3;
-    }
-    .paragraf{
-        height: 30%;
-        width: 100%;
-        background:blue;
-        opacity: 80%;
-        order:2;
-    }
-    .slikadoledesno{
-        height: 40%;
-        width: 100%;
-        background:greenyellow;
-        opacity: 80%;
-        order:1;
-    }
+    .slova{
+    display: flex;
+    width: 50% !important;
+    height: auto;
+    margin-top: -850px !important;
+    }    
+.povecanje{
+height: 15%;
+width: 100%;
+order:2;
+padding-left:13%;
+display: flex;
+align-items: center;
 }
+.paragraf{
+height: 35%;
+width: 100%;
+order:3;
+}
+.slikadoledesno{
+height: 50%;
+width: 100%;
+order:1;
+}
+
+}
+
+
+@media(max-width:1095px){
+
+.glavnaslika{
+width:100% !important;
+}
+.sporednaslika{
+display: none !important; 
+}
+.krug{
+    display:none !important;
+}
+.nestani{
+display:none;
+}
+.slova{
+display: flex;
+width: 100% !important;
+height: auto;
+margin-top: -900px !important;
+ }
+ 
+}
+
+
 @media(max-width:955px){
-    .navbar{
+.navbar{
         height: 150px;
         width: 100%;
-        background:black;
         display: flex;
         align-items: center;
     }
-    .sredina{
-        background-color: aqua;
+.sredina{
         width: 100%;
         height: 700px;
-        opacity: 80%;
         display:flex;
-        
     }
-    .dno{
-        background-color: rgb(255, 0, 242);
-        width: 42%;
-        height: 600px;
-        opacity: 80%;
+.dno{
+        width: 50%;
+        height: 550px;
         display:flex;
         flex-direction: column;
         align-items: center;
     }
-    .sidebar{
+.sidebar{
         height: 700px ;
-        width: 58% ;
-        background:rgb(47, 255, 255);
-        opacity: 80% ; 
-        margin-left:42%;
+        width: 50% ;
+        margin-left:50%;
         display:flex;
         margin-top:-600px;
         flex-direction: row !important;
     }
-    .povecanje{
-        height: 30%;
-        width: 100%;
-        background:red;
-        opacity: 80%;
-        order:3;
+
+.navbartext{
+width: 25% !important;
     }
-    .paragraf{
-        height: 30%;
-        width: 100%;
-        background:blue;
-        opacity: 80%;
-        order:2;
+.navbartext2{
+width: 25% !important;
     }
-    .slikadoledesno{
-        height: 40%;
-        width: 100%;
-        background:greenyellow;
-        opacity: 80%;
-        order:1;
+.navbartext3{
+width: 25% !important;
     }
-.glavnaslika{
+.navbartext4{
+width: 25% !important;
+    }
+.logo{
+display: none !important; 
+    }
+
+    .glavnaslika{
     width:100% !important;
-}
+    }
     .sporednaslika{
         display: none !important; 
     }
-    .navbartext{
-        width: 25% !important;
+
+.povecanje{
+height: 15%;
+width: 100%;
+order:2;
+padding-left:8%;
+display:flex;
+align-items: center;
     }
-    .navbartext2{
-        width: 25% !important;
+.paragraf{
+height: 35%;
+width: 100%;
+order:3;
     }
-    .navbartext3{
-        width: 25% !important;
-    }
-    .navbartext4{
-        width: 25% !important;
-    }
-    .logo{
-        display: none !important; 
+.slikadoledesno{
+height: 50%;
+width: 100%;
+order:1;
     }
 }
-@media(max-width:508px){
-    .navbar{
-        height: 100px;
-        width: 100%;
-        background:black;
-        display: flex;
-        position: static;
-        align-items: center;
+
+
+@media(max-width:650px){
+
+.navbar{
+height: 100px;
+width: 100%;
+background:black;
+display: flex;
+align-items: center;
+}
+.sredina{
+flex-direction: column !important;
+height: 1000px;
+width: 100%;
+}
+.dno{
+width: 100%;
+height: 1400px;
+display:flex;
+flex-direction: column;
+align-items: center;
+}
+.sidebar{
+position:absolute;
+margin-top: 1490px;
+width:100%;
+margin-left: 0 !important;
+height: 175px;
+flex-direction: column !important;
+}
+.krug{
+display: flex !important;
+width: 35%  !important;
+margin-left: 30% !important;
+margin-top: -600px !important;
+}
+.slova{
+display: flex !important;
+width: 155% !important;
+height: auto;
+margin-top: -1200px !important;
+margin-left: -50%;
+}
+
+    .logo{
+        display: flex !important;
+        width: 60%  !important;
+        margin-left: 20% !important;
     }
     .navbartext{
         display: none !important;
@@ -211,35 +267,135 @@
     .navbartext4{
         display: none !important;
     }
-    
-    .logo{
-        display: flex !important;
-width: 100%  !important;
-    }
-    .sredina{
-        flex-direction: column !important;
-    }
-    .slikamobile{
+
+.slikamobile{
+display: flex !important;
+align-items:baseline;
+width: 100%;
+height: 60%;
+}
+.tekstmobile{
 display:flex  !important;
+width: 100%;
+height: 40%;
+padding: 62px;
+flex-direction: column !important;
+}
+.glavnaslika{
+display:none !important;
+}
 
-    background-color: red;
-    width: 100%;
-    height: 40%;
-    opacity: 80%;
-
+    .sidebar3{
+    display: none !important;
     }
-    .tekstmobile{
+    .sidebar4{
+    display: none !important;
+    }
+
+.povecanje{
+margin-top:280px !important;
+height: 50px !important;
+order:2;
+padding-left: 11%;
+}
+.paragraf{     
+height: 120px !important;
+order:3;
+padding-left: 62px !important;    
+}
+.slikadoledesno{
+height: 300px !important;
+order:1;
+    }
+.kupi{
+display:flex  !important;
+width: 100%;
+height: 150px;
+order:4;
+align-items: center;
+margin-left: 20%;
+}
+.addtocart{
+margin-left: 20%;
+}
+.vektor{
+    margin-left:-325px;
+}
+
+    .logo2{
+    display:flex  !important;
+    width: 60%;
+    height: 100px;
+    order:5;
+    align-items: center;
+    margin-left: 4%;
+    }
+    .zadnjaslika{
         display:flex  !important;
-    background-color: blue;
-    width: 100%;
-    height: 60%;
-    opacity: 80%;
+        width: 100%;
+        height: 378px;
+        order:6;
+        align-items:center;
     }
-    .glavnaslika{
-        display:none !important;
-        
-    }
-    
+
+}
+
+body{
+    display:flex;
+    flex-direction: column;
+    background-color: black;
+}
+h5{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    transform: rotate(-90deg);
+    color: #3F3E44;
+}
+h3{
+    font-family: Matroska;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 42px;
+    color: #FFFFFF;
+}
+h4{
+    font-family: 'Montserrat',sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+h1{
+    color: white;
+    font-family: Matroska;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 183%;
+    display: flex;
+    margin:auto;
+    align-items: center;
+    text-align: center;
+}
+h2{
+    color: white;
+    font-size: 25px;
+    padding-bottom: 20px;
+}
+p{
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 200%;
+    color: white;
+}
+img{
+    min-width: 100%;
 }
 *{
     box-sizing: border-box;
@@ -248,97 +404,90 @@ display:flex  !important;
 }
 .logo{
     height: 100%;
-    width: 20%;
-    background:blue;
-    opacity: 80%;
+    width: 24%;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
 }
 .navbartext{
     height: 100%;
-    width: 20%;
-    background:red;
+    width: 19%;
     opacity: 80%;
+    display: flex;
+    align-items: center;
+    text-align: center;
 }
 .navbartext2{
+    display: flex;
     height: 100%;
-    width: 20%;
-    background:yellow;
+    width: 19%;
     opacity: 80%;
+    align-items: center;
+    text-align: center;
 }
 .navbartext3{
+    display: flex;
     height: 100%;
-    width: 20%;
-    background:green;
+    width: 19%;
     opacity: 80%;
+    align-items: center;
+    text-align: center;
 }
 .navbartext4{
+    display: flex;
     height: 100%;
-    width: 20%;
-    background:orange;
+    width: 19%;
     opacity: 80%;
-}
-body{
-    display:flex;
-    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 .glavnaslika{
-    background-color: rgb(118, 151, 51);
-    width: 75%;
+    display: flex;
+    width: 79%;
     height: 100%;
-    opacity: 80%;
     
+    align-items: center;
 }
 .sporednaslika{
-    background-color: rebeccapurple;
-    width: 25%;
+    display: flex;
+    align-items: center;
+    width: 24%;
     height: 100%;
-    opacity: 80%;
 }
-
-
+.sidebardiv1{
+    width:30%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+.sidebardiv2{
+    width:70%;
+    display: flex;
+    flex-direction: column;
+    text-align: flex-start;
+    align-items: flex-start;
+}
+.sidebardiv2 div{
+    height: 33.33%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
 .sidebar1{
     height: 25%;
-
-    background:rgb(224, 80, 80);
-    opacity: 80%; 
-    
-
+    display:flex;
 }
 .sidebar2{
     height: 25%;
-    
-    background:rgb(218, 103, 103);
-    opacity: 80%; 
-    
+    display:flex;
 }
 .sidebar3{
     height: 25%;
-
-    background:rgb(231, 46, 46);
-    opacity: 80%; 
-   
+    display:flex;
 }
 .sidebar4{
     height: 25%;
-
-    background:red;
-    opacity: 80%; 
-  
-}
-.zlato{
-    height: 350px;
-    width: 620px;
-    background:goldenrod;
-    margin-top: 0px;
-    margin-left: 1300px;
-    position: absolute;
-}
-.crno{
-    height: 200px;
-    width: 300px;
-    background:black;
-    margin-top:150px;
-    margin-left: 1000px;
-    position: absolute;
+    display:flex;
 }
 .slikamobile{
     display:none;
@@ -346,3 +495,51 @@ body{
 .tekstmobile{
     display:none;
 }
+.kupi{
+    display:none;
+}
+.zadnjaslika{
+    display: none;
+}
+.logo2{
+    display: none;
+}
+.bar1{
+    height: 5px;
+    width:63.3%;
+    background-color: cornsilk;
+}
+.bar2{
+    height: 5px;
+    width:35%;
+    background-color: orange;
+}
+.twoten{
+    font-size: 25px;
+    padding:10px;
+    color: white;
+    font-weight: bold;
+}
+.bot{
+    margin-bottom: 50px;
+}
+.top{
+    margin-top: 50px;
+}
+.krug{
+    width: 10%;
+    height: auto;
+    margin-left: -40%;
+    margin-top: 5%;
+}
+.slova{
+   display: flex;
+   width: 41%;
+   height: auto;
+   margin-top: -550px;
+}
+.slova img{
+    padding:5%;
+}
+
+
